Code-style and Styling

--- a/popup.html
+++ b/popup.html
@@ -6,32 +6,21 @@
   <body>
     <button id="initialize">Initialize</button>
     <div class="slidecontainer">
-      <input
-        type="range"
-        min="100"
-        max="1000"
-        value="400"
-        class="slider"
-        id="myRange"
-      />
+      <input type="range" min="100" max="1000" value="400" class="slider" id="myRange" />
       <div id="valuecontainer">
         <form>
           Quality:
-          <input
-            id="value"
-            value="400"
-            type="number"
-            step="10"
-            max="1000"
-            min="100"
-          />
+          <input id="value" value="400" type="number" step="10" max="1000" min="100" />
         </form>
       </div>
     </div>
     <button id="reset">Reset</button>
     <button id="deinitialize">Deinitialize</button>
     <p id="already" class="already">equation-slides has not been initialized</p>
-    <p>Source Code Avaliable on <strong><a href="https://github.com/Yash-Singh1/equation-slides">GitHub</a></strong></p>
+    <p>
+      Source Code Avaliable on
+      <strong><a href="https://github.com/Yash-Singh1/equation-slides">GitHub</a></strong>
+    </p>
     <script src="popup.js"></script>
   </body>
 </html>
