--- a/options.html
+++ b/options.html
@@ -6,28 +6,15 @@
   </head>
   <body>
     <div class="slidecontainer">
-      <input
-        type="range"
-        min="100"
-        max="1000"
-        value="400"
-        class="slider"
-        id="myRange"
-      />
+      <input type="range" min="100" max="1000" value="400" class="slider" id="myRange" />
       <div id="valuecontainer">
         <form>
           Quality:
-          <input
-            id="value"
-            value="400"
-            type="number"
-            step="10"
-            max="1000"
-            min="100"
-          />
+          <input id="value" value="400" type="number" step="10" max="1000" min="100" />
         </form>
       </div>
     </div>
     <button id="reset">Reset</button>
+    <script src="options.js"></script>
   </body>
 </html>
